--- a/spago.yaml
+++ b/spago.yaml
@@ -2,6 +2,7 @@ package:
   name: melody-plus-chords
   dependencies:
     - abc-parser
+    - abc-melody
     - arrays
     - bifunctors
     - either
@@ -44,6 +45,25 @@ workspace:
         - tuples
       git: https://github.com/newlandsvalley/purescript-abc-parser.git
       ref: cf9d80458a11f5775471e345d44802823982724c
+    abc-melody:
+      dependencies:
+        - abc-parser
+        - arrays
+        - bifunctors
+        - either
+        - foldable-traversable
+        - integers
+        - lists
+        - maybe
+        - newtype
+        - ordered-collections
+        - prelude
+        - rationals
+        - soundfonts
+        - transformers
+        - tuples
+      git: https://github.com/newlandsvalley/purescript-abc-melody.git
+      ref: 5776b657079245be876616213febd4c7a7084483
     rhythm-guitar:
       dependencies:
         - aff
